update product link

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </div>
       <nav>
         <ul>
-          <li><a href="https://www.hvequipment.cn/h-pr-j-3_1.html#_pp=110_0">Products</a></li>
-          <li><a href="#contact-us">Contact us</a></li>
+          <li><a href="http://www.tcipower.com/TCI/Products/Porcelain-Insulator/Station-post-insulator.html">Products</a></li>
+          <li><a href="#contact-us">Contact</a></li>
         </ul>
       </nav>
     </header>
